# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Tim C for Foamyguy
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-displayio-json-inflater"
description = "Inflates DisplayIO view objects from JSON"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Foamyguy", email = "foamyguy@gmail.com"}
]
urls = {Homepage = "https://github.com/FoamyGuy/CircuitPython_DisplayIO_JSON_Inflater"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "displayio_json_inflater",
    "displayio",
    "json",
    "view",
    "layout",
    "gui",
    "graphics",
    "inflate",
    "inflator",
    "inflater",
    "display",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["displayio_json_inflater"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
